jetty versions corrected